# taoliao

./: .gitignore  README.md  main.py  requirements.txt
docs/: 110-ED21S-DJA原始表 .xlsx  35A1-JC2原始表.xlsx  EB21S-DJ.xlsx  EB21S-DJ原始表.xlsx  HC21Q-ZK原始表.xlsx  套料规则.md  损耗规则.xlsx  算法设计.md  角钢市场清单-simple.xlsx  角钢市场清单.xlsx  设计文档.md  需求清单.xlsx
python/: main.py  pyproject.toml  requirements.txt
python/config/: __init__.py  settings.py
python/core/: __init__.py  greedy_solver.py  loss_calculator.py  mip_solver.py  models.py  optimizer.py  utils.py
python/data/: __init__.py  exporter.py  loader.py
taoliao/: __init__.py
taoliao/config/: __init__.py  settings.py
taoliao/core/: greedy_solver.py  optimizer.py  utils.py
taoliao/data/: exporter.py
taoliao_csharp/: README.md  Taoliao.sln
taoliao_csharp/Taoliao.CLI/: Program.cs  Taoliao.CLI.csproj
taoliao_csharp/Taoliao.Core/: NestingOptimizer.cs  Taoliao.Core.csproj
taoliao_csharp/Taoliao.Core/Algorithms/: GreedyNestingSolver.cs  MipNestingOptimizer.cs
taoliao_csharp/Taoliao.Core/Models/: Models.cs
taoliao_csharp/Taoliao.Core/Services/: DataLoader.cs  LossCalculator.cs  ResultExporter.cs
taoliao_python/: README.md  main.py
taoliao_python/taoliao/config/: settings.py
taoliao_python/taoliao/core/: __init__.py  greedy_solver.py  loss_calculator.py  models.py  optimizer.py
taoliao_python/taoliao/data/: __init__.py  exporter.py  loader.py
